@@ -44,6 +44,11 @@ type Signable interface {
 	AppendSig(sig *Signature)
 }
 
+// Finish the traversal, cleaning up goroutines.
+func FinishTraversal(c chan PacketObject) {
+	for _ = range c {}
+}
+
 // Model representing an OpenPGP public key packets.
 // Searchable fields are extracted from the packet key material
 // stored in Packet, for database indexing.
