@@ -60,8 +60,10 @@ hockeypuck (0.9~a1) precise; urgency=low
     pks.go:
     - Using standard logger, reopen log on SIGHUP/SIGUSR1/SIGUSR2.
       LP: #1121700
+  * merge.go, mgo/worker.go, pgp.go, pgp_types.go:
+    - Fix goroutine leaks in traverse, reading keys.
 
- -- Casey Marshall <casey.marshall@gazzang.com>  Tue, 19 Feb 2013 13:43:17 -0600
+ -- Casey Marshall <casey.marshall@gazzang.com>  Tue, 19 Feb 2013 17:30:10 -0600
 
 hockeypuck (0.8.1) precise; urgency=low
 
